--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 METRICS_PORT=':7201'
-CLIENT_INFO='[{"client":"local","url":"https://rpc.ankr.com/eth_sepolia"}]'
+CLIENT_INFO='[{"client":"local","url":"https://localhost:8545"}]'
